# help-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  bun.lockb  eslint.config.ts  package.json
.github/workflows/: ci.yml
src/: config.rs  constants.ts  index.ts  main.rs  server.rs  services.ts
src/events/: MessageCreate.ts  ThreadCreate.ts  ThreadUpdate.ts  message_create.rs  mod.rs  thread_create.rs  thread_update.rs
src/jobs/: mod.rs  processThread.ts  process_thread.rs
src/util/: createDiscordEventListener.ts
