[package]
name = "help-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
futures = "0.3"
anyhow = "1.0"
tokio = { version = "1.21", features = ["full"] }
twilight-gateway = { default-features = false, features = ["native"], version = "0.14" }
twilight-http = { default-features = false, features = ["native"], version = "0.14" }
twilight-model = "0.14"
twilight-util = { default-features = false, features = ["builder"], version = "0.14" }
regex = "1.7.0"
rouille = "3.6.1"
